<resources>
    <string name="app_name">AlphaFitness</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recenter">Re-Center</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="input_weight">Input Weight</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
<string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>
    <string name="empty" />
    <string name="_00_00_00">00:00:00</string>
    <string name="user_profile">User Profile</string>
    <string name="_0">0</string>
    <string name="if_user_name_does_not_exist_then_a_new_user_of_that_name_will_be_created">If user name does not exist, then a new user of that name will be created.</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="average">Average:</string>
    <string name="min_per_miles">min per miles</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="_0_0_miles">0.0 miles</string>
    <string name="set_user">Set User</string>
    <string name="set_weight">Set weight</string>
</resources>
