<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.huyvo.alphafitness.controller.UserSettingFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/button_back"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:ems="10"
                android:id="@+id/edit_text_first_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/last_name"
            android:ems="10"
            android:id="@+id/edit_text_last_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_weight"
            android:ems="10"
            android:inputType="numberDecimal"
            android:id="@+id/edit_text_weight" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/button_done"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/if_user_name_does_not_exist_then_a_new_user_of_that_name_will_be_created"
                android:id="@+id/textView" android:layout_weight="0.36"/>
    </LinearLayout>
</FrameLayout>
