<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".controller.MapWorkoutFragment">

    <LinearLayout
            android:id="@+id/container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </LinearLayout>
    <LinearLayout
            android:id="@+id/container_2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile"
                android:id="@+id/user_profile_button"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/_0_0_miles"
                android:id="@+id/distance_text_view"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/_00_00_00"
                android:id="@+id/time_text_view"/>

        <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"/>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/button_start"/>
            <Button
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recenter"
                    android:id="@+id/recenter_start"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
